--- a/WebApp.Domain.Interfaces/WebApp.Domain.Interfaces.csproj
+++ b/WebApp.Domain.Interfaces/WebApp.Domain.Interfaces.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Diagnostics.Tracing.EventSource, Version=1.1.28.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.1.28\lib\net46\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
+    </Reference>
+    <Reference Include="RabbitMQ.Client, Version=5.0.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <HintPath>..\packages\RabbitMQ.Client.5.1.0\lib\net451\RabbitMQ.Client.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,10 +50,13 @@
     <Compile Include="DAC\IBotDAC.cs" />
     <Compile Include="DAC\IWebAppDAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IRabbitMQService.cs" />
     <Compile Include="Service\IBotService.cs" />
     <Compile Include="Service\IWebAppService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WebApp.Domain.DataContext\WebApp.Domain.DataContext.csproj">
       <Project>{3A79776A-88ED-47F8-A9C1-658D0722CA11}</Project>
