--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -3,7 +3,7 @@
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
-<configuration>
+<configuration>    
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -21,6 +21,25 @@
     <add name="WebAppDataContext" connectionString="data source=DESKTOP-N3GPRL8\SQLEXPRESS;initial catalog=ChatDB;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="Account/Login"></forms>
+    </authentication>
+    <membership defaultProvider="CustomMembership">
+      <providers>
+        <clear/>
+        <add name="CustomMembership"
+             type="WebApp.Domain.Entities.CustomMembership"/>
+      </providers>
+    </membership>
+
+    <!-- ROLE PROVIDER -->
+    <roleManager defaultProvider="CustomRole" enabled="true">
+      <providers>
+        <clear/>
+        <add name="CustomRole" type="WebApp.Domain.Entities.CustomRole" />
+      </providers>
+    </roleManager>
+
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
   </system.web>
