--- a/WebApp.DAC/WebApp.DAC.DataAccess.csproj
+++ b/WebApp.DAC/WebApp.DAC.DataAccess.csproj
@@ -39,7 +39,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomMerbership.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebAppDAC.cs" />
   </ItemGroup>
