--- a/WebApp.Domain.DataContext/WebApp.Domain.DataContext.csproj
+++ b/WebApp.Domain.DataContext/WebApp.Domain.DataContext.csproj
@@ -50,10 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201907082333005_initial_migration.cs" />
+    <Compile Include="Migrations\201907082333005_initial_migration.Designer.cs">
+      <DependentUpon>201907082333005_initial_migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApp\GetStockValues_Result.cs" />
+    <Compile Include="WebApp\Role.cs" />
     <Compile Include="WebApp\Stock.cs" />
-    <Compile Include="WebApp\Users.cs" />
+    <Compile Include="WebApp\User.cs" />
     <Compile Include="WebApp\WebAppDataContext.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +68,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201907082333005_initial_migration.resx">
+      <DependentUpon>201907082333005_initial_migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
