Not found quote msg added.
Additional validation for quote msgs added.

--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -16,6 +16,7 @@
     <add key="stockCommand" value="/stock" />
     <add key="stockApiUrl" value="http://localhost:53318/api/Bot/GetStockDetails?stockCode=[stockCode]" />
     <add key="BotResponseMsg" value="[stockCode] quote is [open] per share." />
+    <add key="BotResponseMsgNotFound" value="[stockCode] quote was not found." />
   </appSettings>
   <connectionStrings>
     <add name="WebAppDataContext" connectionString="data source=DESKTOP-N3GPRL8\SQLEXPRESS;initial catalog=ChatDB;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
